--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -1,5 +1,16 @@
 name: Terraform Pipeline
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Select environment'
+        required: true
+        default: dev
+        type: choice
+        options:
+          - dev
+          - uat
+          - prod
 
 jobs:
   build:
