--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Load SPN Secret to ENV
-        run: echo "${{ secrets.SPN }}" >> $GITHUB_ENV
+        run: echo "${{ secrets.SPN2 }}" >> $GITHUB_ENV
 
       - name: Azure Login
         run: |
