--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -21,13 +21,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
-      - name: Load SPN Secret to ENV
-        run: echo "${{ secrets.SPN2 }}" >> $GITHUB_ENV
+      # - name: Load SPN Secret to ENV
+      #   run: echo "${{ secrets.SPN2 }}" >> $GITHUB_ENV
 
       - name: Azure Login
-        run: |
-          az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
-          az account set -s "$ARM_SUBSCRIPTION_ID"
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
+
+
+      # - name: Azure Login
+      #   run: |
+      #     az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
+      #     az account set -s "$ARM_SUBSCRIPTION_ID"
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3  # installs terraform ✔
@@ -62,13 +71,21 @@ jobs:
           name: tfplan
           path: ./
 
-      - name: Load SPN Secret to ENV
-        run: echo "${{ secrets.SPN }}" >> $GITHUB_ENV
+      # - name: Load SPN Secret to ENV
+      #   run: echo "${{ secrets.SPN }}" >> $GITHUB_ENV
+
+      # - name: Azure Login
+      #   run: |
+      #     az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
+      #     az account set -s "$ARM_SUBSCRIPTION_ID"
 
       - name: Azure Login
-        run: |
-          az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
-          az account set -s "$ARM_SUBSCRIPTION_ID"
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3  # installs terraform ✔
